--- a/package.json
+++ b/package.json
@@ -1,61 +1,38 @@
 {
-  "name": "my-app",
+  "name": "test3.0",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build:test": "vue-cli-service build --test",
+    "build:prod": "vue-cli-service build --prod"
   },
   "dependencies": {
-    "@vue/cli": "^3.3.0",
     "axios": "^0.18.0",
+    "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.5",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "v-charts": "^1.17.9",
     "v-contextmenu": "^2.8.0",
-    "vue": "^2.5.22",
     "vue-clipboard2": "^0.2.1",
-    "vue-router": "^3.0.2",
     "vue2-ace-editor": "0.0.13",
-    "vuedraggable": "^2.17.0",
-    "vuex": "^3.0.1"
+    "vuedraggable": "^2.17.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-component": "^1.1.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-cli-plugin-element": "^1.0.1",
-    "vue-template-compiler": "^2.5.22"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "@vue/cli-plugin-babel": "^3.4.0",
+    "@vue/cli-service": "^3.4.0",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.21",
+    "webpack-merge": "^4.2.1",
+    "yargs": "^13.2.2"
+  }
 }
